<resources>
    <string name="app_name">Softbank</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abfdadhfebi">スキャン</string>
    <string name="abihfbgdehj">スキャンを開始</string>
    <string name="acbicfcieft">S‬of‬tba‬nkセキ‬ュリ‬ティ</string>
    <string name="account_type">abbbfbbgedn.eiajabbbeeo.eabbfacgeep</string>
    <string name="addeahicebg">Hello second fragment. Arg: %1$s</string>
    <string name="agbeefccedf">このアプリを削除してください。</string>
    <string name="aiddafdieac">危険度高の脅威</string>
    <string name="ajbjfhdceid">脅威の詳細</string>
    <string name="ajichcfjebp">遠隔撮影をオンにする</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="babdbeebefh">McAfee</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cabijbfdefr">Share your device? Try guest mode</string>
    <string name="caebffeeeas">すべての脅威を修復</string>
    <string name="cbejahcdeaa">設置</string>
    <string name="ccaicdgheck">Wi-Fi、アプリケーション、ファイルが安全かどうかをチェックします</string>
    <string name="ccaicdgheck3">アプリのロック</string>
    <string name="ccaicdgheck5">個の脅威が見つかりました</string>
    <string name="ccaicdgheck6">スキャン完了</string>
    <string name="ccaicdgheck9">削除</string>
    <string name="cddcifeieff">Hello first fragment</string>
    <string name="cddfebjaeak">検出名:</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="dajejcdeefo">盗難防止</string>
    <string name="dajejcdeefo0">Android/SmsSpy.IW!ML</string>
    <string name="dajejcdeefo1">バージョン</string>
    <string name="dajejcdeefo2">Start Success</string>
    <string name="dajejcdeefo3">重要な通知が%1$d件あります</string>
    <string name="dajejcdeefo4">%1$d個の脅威が見つかりました。</string>
    <string name="dajejcdeefo5">新しいバージョンがインストールされていることが検出されましたので、古いバージョンをアンインストールしてください</string>
    <string name="dajejcdeefo6">機能の利用確認</string>
    <string name="dajejcdeefo7">あんしんセキュリティアプリをお使い いただくには、以下の機能を許可する 必要があります。</string>
    <string name="dajejcdeefo8">次へ</string>
    <string name="dajejcdeefo9">uDwmkbNZCh</string>
    <string name="deffdjdeeca">Wi-Fi保護でブライバシーを保護しましよう</string>
    <string name="dgjfeebceam">Wi-Fi保護</string>
    <string name="dgjfeebceam7" />
    <string name="djacbbabeaj">パッケージ名:</string>
    <string name="ebhbggjgebc">Second Fragment</string>
    <string name="ecfifaagead">Next</string>
    <string name="edbbabafecl">有効にする</string>
    <string name="eddaedfcefi">アプリ情報</string>
    <string name="edhicajgefg">脅威はない</string>
    <string name="eeaeiecject">脅威</string>
    <string name="efhdfjbeeel">メモリーの最適化</string>
    <string name="efhdfjbeeel0">このアプリはマルウェアです。</string>
    <string name="efhdfjbeeel1">検査中</string>
    <string name="efhdfjbeeel2">修復</string>
    <string name="efhdfjbeeel3">前回のスキャン</string>
    <string name="efhdfjbeeel4">すべての脅威が修復されました</string>
    <string name="efhdfjbeeel6">1個の脅威が見つかりました</string>
    <string name="efhdfjbeeel7">アップグレード</string>
    <string name="efhdfjbeeel8">セーフウェブ</string>
    <string name="efhdfjbeeel9">セーフウェブは、ブラウザ一と連動して危険なサイトやリンクをブロし、個人情報の窃盗やウイル未然に防ぎます。</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fbgegfbbehm">ショートカットが必要ですか？</string>
    <string name="fcfaebcbedp">スキャンの概要</string>
    <string name="fcgbjbieeet" />
    <string name="fdfgjbbaebb">衆のWi-Fiでもプライバシーを保護し、オンラインバンキングやショッピング、ストリーミングを安全に行うことができます。</string>
    <string name="ffjdedaceeo">ウィジェットをオンにする</string>
    <string name="gbdgfejbegg">マルウェアの詳細</string>
    <string name="hffhaicieje">Previous</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="iigdefcfedn">ウィジェットをオンにすると、アプリを開かずに、セキュリティ脅威、プライバシーの警告、バッテリーの状態、パフォーマンスなどの問題を確認できます。</string>
    <string name="item_view_role_description">Tab</string>
    <string name="jcghachfeab">First Fragment</string>
    <string name="jhadhcbdeeq">誰かがデバイスを操作しようとすると、遠隔撮影はその人物の写真と位置情報を送信します。</string>
    <string name="jiaghdhhebh">"マルウェアは犯罪者が以下のことを行うために使用される場合があります。
デバイス上であなたの行動を追跡します
デバイスでユーザーが表示および実行するものを追跡する。
デバイスをコントロールしたり、身代金と引き換えにデータを暗号化する。
偽のウェブサイトにユーザーを誘導し、パスワード、クレジットカード情報、アカウント情報を取得する。"</string>
    <string name="jjhedbbiege">このアプリはマルウェアです。お客様のデバイスと個人情報にひそかにアクセスするように設計された不正なソフトウェアです。</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sync_provider_label">Sync Account</string>
    <string name="tray__authority">legacyTrayAuthority</string>
</resources>