<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:background="#ffffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:drawableLeft="@mipmap/eiffhaiceaf"
            android:drawablePadding="4.0dip"
            android:gravity="center"
            android:text="@string/acbicfcieft"
            android:textColor="#ff000000" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffffff"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img"
                    android:src="@drawable/affbeajeebq"
                    android:layout_width="35.0dip"
                    android:layout_height="35.0dip"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="15.0dip" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ff000000"
                        android:textSize="16.0sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gdchcbgfehm"
                        android:textSize="13.0sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:drawableLeft="@drawable/dcfbddbbedb"
                android:drawablePadding="4.0dip"
                android:gravity="center"
                android:text="@string/aiddafdieac"
                android:textColor="@color/gifeddajeio"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="16.0dip"
                android:background="@color/adbehgaeecp"
                android:gravity="center_vertical"
                android:paddingLeft="10.0dip"
                android:text="@string/ajbjfhdceid"
                android:textColor="#ff000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/jjhedbbiege"
                android:textColor="@color/gdchcbgfehm" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="20.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/agbeefccedf"
                android:textColor="@color/gdchcbgfehm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="16.0dip"
                android:background="@color/adbehgaeecp"
                android:gravity="center_vertical"
                android:paddingLeft="10.0dip"
                android:text="@string/gbdgfejbegg"
                android:textColor="#ff000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/jiaghdhhebh"
                android:textColor="@color/gdchcbgfehm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40.0dip"
                android:layout_marginTop="16.0dip"
                android:background="@color/adbehgaeecp"
                android:gravity="center_vertical"
                android:paddingLeft="10.0dip"
                android:text="@string/eddaedfcefi"
                android:textColor="#ff000000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/djacbbabeaj"
                android:textColor="#ff000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pkg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:textColor="@color/gdchcbgfehm" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cddfebjaeak"
                    android:textColor="#ff000000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10.0dip"
                    android:text="@string/dajejcdeefo0"
                    android:textColor="@color/gdchcbgfehm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EpNshyymLBN"
                    android:visibility="gone" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70.0dip"
                android:background="@color/adbehgaeecp">

                <TextView
                    android:id="@+id/remove"
                    android:layout_width="match_parent"
                    android:layout_height="50.0dip"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10.0dip"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginEnd="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@color/afdbabfgecq"
                    android:gravity="center"
                    android:text="@string/ccaicdgheck9"
                    android:textColor="#ffffffff"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>