<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe6e7e8"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56.0dip"
        android:background="#ffffffff">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:scaleType="centerInside"
            android:src="@drawable/fajbdidbeen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fcfaebcbedp"
            android:textColor="#ff000000"
            android:textSize="18.0sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bg_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffc81a2e"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30.0dip"
                    android:src="@drawable/eaaeajghedk" />

                <TextView
                    android:id="@+id/ccaicdgheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10.0dip"
                    android:text="@string/ccaicdgheck5"
                    android:textColor="#ffffffff"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dgjfeebceam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10.0dip"
                    android:text="@string/ccaicdgheck6"
                    android:textColor="#ffffffff"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@+id/fix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="30.0dip"
                    android:background="@drawable/gficfdehegj"
                    android:gravity="center"
                    android:paddingLeft="10.0dip"
                    android:paddingTop="5.0dip"
                    android:paddingRight="10.0dip"
                    android:paddingBottom="5.0dip"
                    android:text="@string/caebffeeeas"
                    android:textColor="#ffffffff"
                    android:textSize="16.0sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/eeaeiecject"
                android:textColor="#ff000000"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TubJyaBQoKBuSMTYl"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>