<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:background="@drawable/cegadahbedh">

        <LinearLayout
            android:id="@+id/ccaicdgheck_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="24.0dip"
                android:text="@string/dajejcdeefo6"
                android:textColor="#ff000000"
                android:textSize="18.0sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26.0dip"
                android:layout_marginTop="20.0dip"
                android:layout_marginRight="26.0dip"
                android:text="@string/dajejcdeefo7"
                android:textColor="@color/gdchcbgfehm"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="50.0dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="40.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginBottom="10.0dip"
                android:background="@color/afdbabfgecq"
                android:gravity="center"
                android:text="@string/dajejcdeefo8"
                android:textColor="#ffffffff"
                android:textSize="14.0sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mqpZGGgeEoFoHHd"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>